--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@
 
 }
 
-@media screen and (min-width: 786px){
+@media screen and (min-width: 768px){
     :root{
         --body-font : 'Poppins', sans-serif;
     --biggest-font-size : 4rem;
@@ -55,7 +55,7 @@
     }
 }
 
-/* ======BASIC CSS ========= */
+/* ======BASE CSS ========= */
 *,::before, ::after{
     box-sizing: border-box;
 }
@@ -65,6 +65,11 @@ html{
 
 body{
     margin: var(--header-height) 0 0 0;
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    background-color: var(--body-color);
+    color: var(--text-color);
+    line-height: 1.6;
 }
 h1,h2, h3, p, ul{
     margin: 0;
@@ -73,7 +78,83 @@ ul{
     padding: 0;
     list-style: none;
 }
+a{
+    text-decoration: none;
+  }
 img{
     max-width: 100%;
     height: auto;
+}
+
+/* =========Layout============= */
+.bd-container{
+    max-width: 960px;
+    width: calc(100%-2rem);
+    margin-left: var(--mb-2);
+    margin-right: var(--mb-2);
+}
+.header{
+    width: 100%;
+    position:fixed;
+    top:0;
+    left:0;
+    z-index: var(--z-fixed);
+    background-color: var(--body-color);
+}
+
+/* ========= NAV ============= */
+.nav{
+    max-width:1024px ;
+    height: var(--header-height);
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+@media screen and (max-width: 768px){
+    .nav_menu{
+        position: fixed;
+        padding: 1.5rem 0 1rem;
+        text-align: center;
+        top:var(--header-height);
+        left:0;
+        width: 100%;
+        background-color: var(--body-color);
+        transition: 0.4s;
+        box-shadow: 0 4px 4px rgba(0,0,0, 0.1);
+        border-radius: 0 0 1rem 1rem;
+        z-index: var(--z-fixed);
+    }
+}
+
+.nav-item{
+    margin-bottom: var(--mb-2);
+}
+.nav_link, .nav_logo, .nav_toggle{
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+}
+.nav_link{
+    transition: 0.3s;
+}
+.nav_link:hover{
+    color: var(--first-color);
+}
+
+/* ======== CLASS CSS ========== */
+.section{
+    padding: 4rem 0 2rem;
+}
+.section-title, .section-subtitle{
+    text-align: center;
+}
+.section-title{
+    font-size: var(--h1-font-size);
+    color: var(--text-color);
+    margin-bottom: var(--mb-3);
+}
+.section-subtitle{
+    display:block;
+    color:var(--first-color);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-1);
 }
