--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,3 +169,36 @@ img{
 .show_menu{
     top:var(--header-height);
 }
+
+/* =========== HOME ================= */
+.home_container{
+    height: clac(100vh - var(--header-height));
+    align-content: center;
+}
+.home_title{
+    font-size: var(--biggest-font-size);
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
+}
+.home_subtitle{
+    font-size: var(--h1-font-size);
+    color: var(--title-color);
+    margin-bottom: var(--mb-4);
+}
+.home_img{
+    width:300px;
+    justify-content: center;
+}
+
+/* ======= BUTTON ========== */
+.btn{
+    display: inline-block;
+    background-color: var(--first-color);
+    color:#fff;
+    padding:0.75 rem 1rem;
+    border-radius: .5rem;
+    transition: .3s;
+}
+.btn:hover{
+    background-color: var(--first-color-alt);
+}
