--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,3 +202,16 @@ img{
 .btn:hover{
     background-color: var(--first-color-alt);
 }
+
+/* ======= ABOUT ========== */
+.about_data{
+    text-align: center;
+}
+.about_description{
+    margin-bottom: var(--mb-3);
+}
+.about_img{
+    width: 280px;
+    border-radius: .5rem;
+    justify-self:center;
+}
