sevices section done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,11 +216,32 @@ img{
 }
 .about_img{
     width: 280px;
+    height: auto;
     border-radius: 8px;
-    justify-self: stretch;
+    justify-self: center;
 }
 /* ======== SERVICES ============= */
-.services_content{
+.services_container{
     row-gap: 2.5rem;
-    grid-template-columns: repeat(auto fit, minmax(220px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+.services_content{
+    text-align: center;
+}
+.services_img{
+    width: 64px;
+    height: 64px;
+    fill: var(--first-color);
+    margin-bottom: var(--mb-2);
+
+}
+.services_title{
+    font-size: var(--h3-font-size);
+    color: var(--title-color);
+    margin-bottom: var(--mb-1);
+
+}
+.services_description{
+    padding: 0 1.5rem;
+    margin-bottom: var(--mb-3);
 }
