--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,10 @@ img{
     margin-left: var(--mb-2);
     margin-right: var(--mb-2);
 }
+.bd-grid{
+    display:grid;
+    gap:1.5rem;
+}
 .header{
     width: 100%;
     position:fixed;
@@ -263,6 +267,27 @@ img{
 }
 .menu_img{
     width: 100px;
-    align-items: center;
+    align-self: center;
     margin-bottom: var(--mb-2);
+}
+.menu_name, .menu_price{
+    font-weight: var(--font-semi-bold);
+    color:var(--title-color);
+}
+.menu_name{
+    font-size: var(--normal-font-size);
+}
+.menu_detail, .menu_price{
+    font-size: var(--smal-font-size);
+}
+.menu_detail{
+    margin-bottom: var(--mb-1);
+}
+.menu_button{
+    position: absolute;
+    display:flex;
+    bottom: 0;
+    right: 0;
+    padding: 0.625rem .813rem;
+    border-radius: 0.5rem 0 0.5rem 0;
 }
