css add : App download section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,3 +291,21 @@ img{
     padding: 0.625rem .813rem;
     border-radius: 0.5rem 0 0.5rem 0;
 }
+/* ========== APP ========== */
+.app_data{
+    text-align: center;
+}
+.app_description{
+    margin-bottom: var(--mb-5);
+}
+.app_stores{
+    margin-bottom: var(--mb-4);
+}
+.app_store{
+    width: 120px;
+    margin: 0 var(--mb-1);
+}
+.app_img{
+    width: 230px;
+    justify-content: center;
+}
