css: footer section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,3 +317,50 @@ img{
 .contact_description{
     margin-bottom: var(--mb-5);
 }
+
+/* ========== FOOTER ========= */
+.footer_container{
+    grid-template-columns: repeat(auto-fit, minmax(220px, lfr));
+    row-gap:2rem;
+}
+.footer_logo{
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-semi-bold);
+    color: var(--first-color);
+}
+.footer_description{
+    display: block;
+    font-size: var(--small-font-size);
+    margin: 0.25rem 0 var(--mb-3) ;
+}
+
+.footer_social{
+    font-size: 1.5rem;
+    margin-right: var(--mb-2);
+    color: var(--title-color);
+}
+.footer_title{
+    font-size: var(--h2-font-size);
+    color: var(--title-color);
+    margin-bottom: var(--mb-2);
+}
+
+.footer_link{
+    display:inline-block;
+    color: var(--text-color);
+    margin-bottom: var(--mb-1);
+}
+.footer_link:hover{
+    color:var(--first-color)
+}
+.footer_copy{
+    font-size: var(--smaller-font-size);
+    text-align: center;
+    margin-top: 1.5rem;
+    color: var(--tex-color-light);
+}
+
+.footer_copy span{
+    color: var(--first-color);
+    font-weight: var(--font-semi-bold);
+}
