media query: for min width 570px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,7 @@
 *,::before, ::after{
     box-sizing: border-box;
 }
+
 html{
     scroll-behavior: smooth;
 }
@@ -71,16 +72,20 @@ body{
     color: var(--text-color);
     line-height: 1.6;
 }
+
 h1,h2, h3, p, ul{
     margin: 0;
 }
+
 ul{
     padding: 0;
     list-style: none;
 }
+
 a{
     text-decoration: none;
   }
+
 img{
     max-width: 100%;
     height: auto;
@@ -93,10 +98,12 @@ img{
     margin-left: var(--mb-2);
     margin-right: var(--mb-2);
 }
+
 .bd-grid{
     display:grid;
     gap:1.5rem;
 }
+
 .header{
     width: 100%;
     position:fixed;
@@ -114,6 +121,7 @@ img{
     justify-content: space-between;
     align-items: center;
 }
+
 @media screen and (max-width: 768px){
     .nav_menu{
         position: fixed;
@@ -133,19 +141,24 @@ img{
 .nav_item{
     margin-bottom: var(--mb-2);
 }
+
 .nav_link, .nav_logo, .nav_toggle{
     color: var(--text-color);
     font-weight: var(--font-medium);
 }
+
 .nav_logo:hover{
     color:var(--first-color);
 }
+
 .nav_link{
     transition: 0.3s;
 }
+
 .nav_link:hover{
     color: var(--first-color);
 }
+
 .nav_toggle{
     font-size: 1.3rem;
     cursor: pointer;
@@ -155,14 +168,17 @@ img{
 .section{
     padding: 4rem 0 2rem;
 }
+
 .section_title, .section_subtitle{
     text-align: center;
 }
+
 .section_title{
     font-size: var(--h1-font-size);
     color: var(--text-color);
     margin-bottom: var(--mb-3);
 }
+
 .section_subtitle{
     display:block;
     color:var(--first-color);
@@ -180,16 +196,19 @@ img{
     height: clac(100vh - var(--header-height));
     align-content: center;
 }
+
 .home_title{
     font-size: var(--biggest-font-size);
     color: var(--first-color);
     margin-bottom: var(--mb-1);
 }
+
 .home_subtitle{
     font-size: var(--h1-font-size);
     color: var(--title-color);
     margin-bottom: var(--mb-4);
 }
+
 .home_img{
     width:300px;
     justify-content: center;
@@ -204,21 +223,21 @@ img{
     border-radius: .5rem;
     transition: .3s;
 }
+
 .btn:hover{
     background-color: var(--first-color-alt);
 }
 
 /* ======= ABOUT ========== */
-.about{
-
-}
 .about_data{
     text-align: center;
     margin-bottom: var(--mb-3);
 }
+
 .about_description{
     margin-bottom: var(--mb-3);
 }
+
 .about_img{
     width: 280px;
     height: 300px;
@@ -230,9 +249,11 @@ img{
     row-gap: 2.5rem;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
 }
+
 .services_content{
     text-align: center;
 }
+
 .services_img{
     width: 64px;
     height: 64px;
@@ -240,12 +261,14 @@ img{
     margin-bottom: var(--mb-2);
 
 }
+
 .services_title{
     font-size: var(--h3-font-size);
     color: var(--title-color);
     margin-bottom: var(--mb-1);
 
 }
+
 .services_description{
     padding: 0 1.5rem;
     margin-bottom: var(--mb-3);
@@ -256,6 +279,7 @@ img{
     grid-template-columns: repeat(2,1fr);
     justify-content: center;
 }
+
 .menu_content{
     position: relative;
     display:flex;
@@ -265,24 +289,30 @@ img{
     box-shadow: 0 2px 4px rgba(3,74,40, 0.1);
     padding: 0.75rem;
 }
+
 .menu_img{
     width: 100px;
     align-self: center;
     margin-bottom: var(--mb-2);
 }
+
 .menu_name, .menu_price{
     font-weight: var(--font-semi-bold);
     color:var(--title-color);
 }
+
 .menu_name{
     font-size: var(--normal-font-size);
 }
+
 .menu_detail, .menu_price{
     font-size: var(--smal-font-size);
 }
+
 .menu_detail{
     margin-bottom: var(--mb-1);
 }
+
 .menu_button{
     position: absolute;
     display:flex;
@@ -295,12 +325,14 @@ img{
 .app_data{
     text-align: center;
 }
+
 .app_description{
     margin-bottom: var(--mb-5);
 }
 .app_stores{
     margin-bottom: var(--mb-4);
 }
+
 .app_store{
     width: 120px;
     margin: 0 var(--mb-1);
@@ -314,6 +346,7 @@ img{
 .contact_container{
     text-align: center;
 }
+
 .contact_description{
     margin-bottom: var(--mb-5);
 }
@@ -323,11 +356,13 @@ img{
     grid-template-columns: repeat(auto-fit, minmax(220px, lfr));
     row-gap:2rem;
 }
+
 .footer_logo{
     font-size: var(--h3-font-size);
     font-weight: var(--font-semi-bold);
     color: var(--first-color);
 }
+
 .footer_description{
     display: block;
     font-size: var(--small-font-size);
@@ -339,6 +374,7 @@ img{
     margin-right: var(--mb-2);
     color: var(--title-color);
 }
+
 .footer_title{
     font-size: var(--h2-font-size);
     color: var(--title-color);
@@ -350,9 +386,11 @@ img{
     color: var(--text-color);
     margin-bottom: var(--mb-1);
 }
+
 .footer_link:hover{
     color:var(--first-color)
 }
+
 .footer_copy{
     font-size: var(--smaller-font-size);
     text-align: center;
@@ -363,4 +401,25 @@ img{
 .footer_copy span{
     color: var(--first-color);
     font-weight: var(--font-semi-bold);
+}
+
+/* ========= MEDIA QUERY ============ */
+@media  screen and (min-width: 570px){
+    .home_container, .about_container, .app_container{
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+    }
+    .contact_container{
+        grid-template-columns: 1.75fr 1fr;
+        align-items: center;
+    }
+    .text_inital{
+        text-align: initial;
+    }
+    .about_container img , .app_img{
+        order: -1;
+    }
+    .contact_button{
+        justify-self: center;
+    }
 }
