--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,3 +424,41 @@ img{
         justify-self: center;
     }
 }
+
+@media screen and (min-width: 768px){
+    body{
+        margin: 0;
+    }
+    .section{
+        padding-top: 8rem;
+    }
+    .nav{
+        height: calc var(--header-height+1.5rem);
+    }
+    .nav_list{
+        display: flex;
+    }
+    .nav_link{
+        margin-left: var(--mb-5);
+    }
+    .nav_toggle{
+        display: none;
+    }
+    .home_container{
+        height: 100vh;
+        justify-items: center;
+    }
+}
+@media screen and (min-width: 960px){
+    .bd-container{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .home_img{
+        width: 500px;
+    }
+    .about_container,
+    .app_container{
+        column-gap: 7rem;
+    }
+}
