--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,7 +90,22 @@ img{
     max-width: 100%;
     height: auto;
 }
-
+/* ========= Variables Dark theme ========= */
+body.dark-theme{
+    --title-color : #f1f3f2;
+    --text-color : #C7D1CC;
+    --body-color : #1D2521;
+    --container-color : #27302C;
+}
+/* ========= Button light/Dark ========== */
+.change_theme{
+    position: absolute;
+    right: 1rem;
+    top:1.8rem;
+    color: var(--text-color);
+    font-size: 1rem;
+    cursor: pointer;
+}
 /* =========Layout============= */
 .bd-container{
     max-width: 960px;
